// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`GOLDEN buildHeaders (default executor providers) > codebuddy → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
    "User-Agent": "CLI/2.144.0 CodeBuddy/2.144.0",
    "X-Agent-Purpose": "conversation",
    "X-Agent-Type": "main",
    "X-App": "cli",
    "X-Domain": "www.codebuddy.ai",
    "X-IDE-Name": "CLI",
    "X-IDE-Type": "CLI",
    "X-IDE-Version": "2.144.0",
    "X-Private-Data": "false",
    "X-Product": "SaaS",
    "x-codebuddy-request": "1",
    "x-requested-with": "XMLHttpRequest",
    "x-stainless-arch": "arm64",
    "x-stainless-helper-method": "stream",
    "x-stainless-lang": "js",
    "x-stainless-os": "MacOS",
    "x-stainless-package-version": "6.25.0",
    "x-stainless-retry-count": "0",
    "x-stainless-runtime": "node",
    "x-stainless-runtime-version": "v24.15.0",
  },
  "nonStream": {
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
    "User-Agent": "CLI/2.144.0 CodeBuddy/2.144.0",
    "X-Agent-Purpose": "conversation",
    "X-Agent-Type": "main",
    "X-App": "cli",
    "X-Domain": "www.codebuddy.ai",
    "X-IDE-Name": "CLI",
    "X-IDE-Type": "CLI",
    "X-IDE-Version": "2.144.0",
    "X-Private-Data": "false",
    "X-Product": "SaaS",
    "x-codebuddy-request": "1",
    "x-requested-with": "XMLHttpRequest",
    "x-stainless-arch": "arm64",
    "x-stainless-helper-method": "stream",
    "x-stainless-lang": "js",
    "x-stainless-os": "MacOS",
    "x-stainless-package-version": "6.25.0",
    "x-stainless-retry-count": "0",
    "x-stainless-runtime": "node",
    "x-stainless-runtime-version": "v24.15.0",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
    "User-Agent": "CLI/2.144.0 CodeBuddy/2.144.0",
    "X-Agent-Purpose": "conversation",
    "X-Agent-Type": "main",
    "X-App": "cli",
    "X-Domain": "www.codebuddy.ai",
    "X-IDE-Name": "CLI",
    "X-IDE-Type": "CLI",
    "X-IDE-Version": "2.144.0",
    "X-Private-Data": "false",
    "X-Product": "SaaS",
    "x-codebuddy-request": "1",
    "x-requested-with": "XMLHttpRequest",
    "x-stainless-arch": "arm64",
    "x-stainless-helper-method": "stream",
    "x-stainless-lang": "js",
    "x-stainless-os": "MacOS",
    "x-stainless-package-version": "6.25.0",
    "x-stainless-retry-count": "0",
    "x-stainless-runtime": "node",
    "x-stainless-runtime-version": "v24.15.0",
  },
}
`;

exports[`GOLDEN buildHeaders (default executor providers) > codebuddy-cn → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
    "User-Agent": "CLI/2.108.1 CodeBuddy/2.108.1",
    "X-IDE-Name": "CLI",
    "X-IDE-Type": "CLI",
    "X-Product": "SaaS",
    "x-codebuddy-request": "1",
    "x-requested-with": "XMLHttpRequest",
  },
  "nonStream": {
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
    "User-Agent": "CLI/2.108.1 CodeBuddy/2.108.1",
    "X-IDE-Name": "CLI",
    "X-IDE-Type": "CLI",
    "X-Product": "SaaS",
    "x-codebuddy-request": "1",
    "x-requested-with": "XMLHttpRequest",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
    "User-Agent": "CLI/2.108.1 CodeBuddy/2.108.1",
    "X-IDE-Name": "CLI",
    "X-IDE-Type": "CLI",
    "X-Product": "SaaS",
    "x-codebuddy-request": "1",
    "x-requested-with": "XMLHttpRequest",
  },
}
`;

exports[`GOLDEN buildUrl (default executor providers) > codebuddy → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://www.codebuddy.ai/v2/chat/completions",
  "stream": "https://www.codebuddy.ai/v2/chat/completions",
}
`;

exports[`GOLDEN buildUrl (default executor providers) > codebuddy-cn → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://copilot.tencent.com/v2/chat/completions",
  "stream": "https://copilot.tencent.com/v2/chat/completions",
}
`;
